initial work for pax south 15